dist_data_DATA=\
	tutorial-basic.lua \
	tutorial-inject.lua \
	tutorial-rewrite.lua \
	tutorial-query-time.lua \
	tutorial-packets.lua \
	tutorial-warnings.lua \
	tutorial-constants.lua \
	tutorial-keepalive.lua \
	tutorial-tokenize.lua \
	tutorial-resultset.lua \
	tutorial-load-multi.lua \
	tutorial-states.lua

