EXTRA_DIST = \
		bug_30867.result \
		bug_35669.result \
		bug_35729.result \
		bug_45167.result \
		bug_41991.result \
		bug_46141.result \
		bug_43078.result \
		change_user.result \
		client_address.result \
		chain1.result \
		constants.result \
		error_struct.result \
		failover.result \
		lineno.result \
		load_multi.result \
		mysql-40.result \
		no_backend.result \
		overlong.result \
		pooling.result \
		raw_packets.result \
		resultset.result \
		select_affected_rows.result \
		select_null.result \
		tokens1.result \
		tokens2.result \
		tokens-normalize.result \
		xtab1.result \
		xtab2.result

