#  $%BEGINLICENSE%$
#  Copyright (c) 2009, 2012, Oracle and/or its affiliates. All rights reserved.
# 
#  This program is free software; you can redistribute it and/or
#  modify it under the terms of the GNU General Public License as
#  published by the Free Software Foundation; version 2 of the
#  License.
# 
#  This program is distributed in the hope that it will be useful,
#  but WITHOUT ANY WARRANTY; without even the implied warranty of
#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
#  GNU General Public License for more details.
# 
#  You should have received a copy of the GNU General Public License
#  along with this program; if not, write to the Free Software
#  Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA
#  02110-1301  USA
# 
#  $%ENDLICENSE%$
EXTRA_DIST = \
		bug_30867.result \
		bug_35669.result \
		bug_35729.result \
		bug_45167.result \
		bug_41991.result \
		bug_46141.result \
		bug_43078.result \
		bug_49248.result \
		bug_55459.result \
		bug_61998.result \
		change_user.result \
		client_address.result \
		chain1.result \
		constants.result \
		error_struct.result \
		failover.result \
		lineno.result \
		ignore-resultset.result \
		load_multi.result \
		load-data-infile.result \
		mysql-40.result \
		no_backend.result \
		overlong.result \
		pooling.result \
		raw_packets.result \
		resultset.result \
		select_affected_rows.result \
		select_null.result \
		tokens1.result \
		tokens2.result \
		tokens-normalize.result \
		xtab1.result \
		xtab2.result

