EXTRA_DIST = \
		select_affected_rows.test \
		select_affected_rows.lua \
		select_null.test \
		raw_packets.lua \
		raw_packets.test \
		resultset.lua \
		resultset.test \
		default.options \
		error_struct.test \
		error_struct.lua \
		tokens1.test \
		tokens1.lua \
		tokens2.test \
		tokens2.lua \
		xtab1.test \
		xtab1.lua \
		xtab2.test \
		xtab2.lua \
		bug_30867.test \
		bug_30867.lua \
		bug_30867.options \
		chain1.test \
		chain1.options \
		chain1a.lua \
		chain1b.lua 

